fix grit overlay and scrollbar color on code blocks

--- a/src/styles/TipStyles.module.css
+++ b/src/styles/TipStyles.module.css
@@ -49,6 +49,7 @@
   border-top: 0;
   border-bottom: 0;
   margin: 10px 0;
+  position: relative;
   /* transform: rotate(-1deg); */
   &:after {
     display: block;
@@ -56,7 +57,9 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: var(--whiteGrit) top left, var(--whiteGrit) bottom right;
+    background:
+      var(--whiteGrit) top left,
+      var(--whiteGrit) bottom right;
     background-size: 550px;
     pointer-events: none;
   }
